# UnityCatalog

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.dev.dockerignore  NOTICE  README.md  seed.py
.github/workflows/: docker-image.yml
crates/uc-api/: Cargo.toml
crates/uc-api/src/: error_ext.rs  lib.rs  middleware.rs  state.rs
crates/uc-api/src/catalog_api/: catalogs.rs  credentials.rs  delta_commits.rs  external_locations.rs  functions.rs  helpers.rs  metastore.rs  mod.rs  models.rs  permissions.rs  schemas.rs  staging_tables.rs  tables.rs  temp_credentials.rs  volumes.rs
crates/uc-api/src/control_api/: auth.rs  mod.rs  scim2.rs
crates/uc-api/src/delta_api/: config.rs  credentials.rs  mod.rs  tables.rs
crates/uc-api/tests/: test_catalogs.rs  test_control_api.rs  test_credentials_permissions.rs  test_delta_api.rs  test_misc_handlers.rs  test_schemas.rs  test_tables.rs  test_unit_logic.rs  test_volumes_functions_models.rs
crates/uc-api/tests/common/: mod.rs
crates/uc-auth/: Cargo.toml
crates/uc-auth/resources/: jcasbin_auth_model.conf
crates/uc-auth/src/: authorizer.rs  db_adapter.rs  jwt.rs  keys.rs  lib.rs
crates/uc-credentials/: Cargo.toml
crates/uc-credentials/src/: context.rs  lib.rs  vendor.rs
crates/uc-db/: Cargo.toml
crates/uc-db/src/: lib.rs  managed_storage.rs  pool.rs
crates/uc-db/src/models/: catalog.rs  credential.rs  delta.rs  external_location.rs  function.rs  metastore.rs  mod.rs  model.rs  property.rs  schema.rs  staging.rs  table.rs  user.rs  volume.rs
crates/uc-db/src/repos/: catalog.rs  credential.rs  delta.rs  external_location.rs  function.rs  metastore.rs  mod.rs  model.rs  property.rs  schema.rs  staging.rs  table.rs  user.rs  volume.rs
crates/uc-db/tests/: test_repos.rs
crates/uc-errors/: Cargo.toml
crates/uc-errors/src/: lib.rs
crates/uc-openapi/: Cargo.toml
crates/uc-openapi/src/: catalog.rs  common.rs  control.rs  delta.rs  lib.rs
crates/uc-server/: Cargo.toml
crates/uc-server/src/: main.rs
crates/uc-types/: Cargo.toml
crates/uc-types/src/: lib.rs
migrations/postgres/: 20240001_initial_schema.sql  20240002_casbin_policy.sql
migrations/sqlite/: 20240001_initial_schema.sql  20240002_casbin_policy.sql
scripts/: seed.py
tests/python/: conftest.py  conftest.py.noauth  conftest_8083.py  test_credentials.py  test_delta_protocol.py  test_fixes.py  test_function.py  test_gap_fixes.py  test_managed.py  test_models.py  test_permissions.py  test_scim2.py  test_table.py  test_volume.py
ui/: package-lock.json
