[package]
name = "uc-auth"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dependencies]
uc-errors = { path = "../uc-errors" }
uc-types = { path = "../uc-types" }
uc-db = { path = "../uc-db" }
jsonwebtoken = { workspace = true }
casbin = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
async-trait = "0.1"
