[package]
name = "uc-credentials"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
uc-errors = { path = "../uc-errors" }
uc-types = { path = "../uc-types" }
uc-openapi = { path = "../uc-openapi" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

aws-config = { workspace = true }
aws-sdk-sts = { workspace = true }
aws-sdk-s3 = { workspace = true }
