[package]
name = "uc-db"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dependencies]
uc-errors = { path = "../uc-errors" }
uc-types = { path = "../uc-types" }
uc-openapi = { path = "../uc-openapi" }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
